# bunctl

./: .gitignore  Cargo.toml  LICENSE  README.md  bunctl
.claude/: settings.local.json
.github/: discussions-welcome.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  config.yml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  claude.yml  release.yml  test.yml
bunctl/: Cargo.toml  README.md
bunctl-core/: Cargo.toml  README.md
bunctl-core/src/: app.rs  backoff.rs  config.rs  error.rs  lib.rs  process.rs  supervisor.rs
bunctl-core/src/config/: ecosystem.rs  loader.rs
bunctl-core/tests/: app_state_tests.rs  backoff_edge_cases_tests.rs  backoff_tests.rs  config_loader_comprehensive_tests.rs  config_loader_tests.rs  config_security_tests.rs  config_tests.rs  config_validation_tests.rs  ecosystem_config_tests.rs  ecosystem_security_tests.rs  security_test.rs  security_tests.rs
bunctl-ipc/: Cargo.toml  README.md
bunctl-ipc/src/: lib.rs  unix.rs  windows.rs
bunctl-ipc/tests/: error_handling_tests.rs  integration_test.rs  integration_tests.rs  platform_tests.rs  stress_tests.rs
bunctl-logging/: Cargo.toml  README.md
bunctl-logging/src/: buffer.rs  lib.rs  metrics.rs  rotation.rs  writer.rs
bunctl-logging/tests/: buffer_tests.rs  concurrent_tests.rs  edge_cases_tests.rs  integration_tests.rs  performance_tests.rs  rotation_tests.rs  stress_tests.rs  writer_tests.rs
bunctl-rs/.github/workflows/: ci.yml  release.yml
bunctl-supervisor/: Cargo.toml  README.md
bunctl-supervisor/src/: common.rs  lib.rs  linux.rs  macos.rs  windows.rs
bunctl-supervisor/tests/: linux_tests.rs  macos_tests.rs  registry_tests.rs  supervisor_tests.rs  windows_tests.rs
bunctl/src/: cli.rs  common.rs  daemon.rs  main.rs
bunctl/src/commands/: delete.rs  init.rs  list.rs  logs.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
bunctl/tests/: cli_tests.rs  command_tests.rs  e2e_tests.rs  integration_test.rs
tests/: integration_test.rs
