[workspace]
members = [
    "bunctl",
    "bunctl-core", 
    "bunctl-supervisor",
    "bunctl-logging",
    "bunctl-ipc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["bunctl contributors"]
license = "MIT"
repository = "https://github.com/evobug/bunctl-rs"
rust-version = "1.89.0"

[workspace.dependencies]
tokio = { version = "1.47", features = ["rt", "macros", "time", "process", "signal", "fs", "io-util", "sync", "parking_lot"] }
mio = { version = "1.0", features = ["os-poll", "os-ext", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.31"
thiserror = "2.0"
bytes = "1.10"
pin-project-lite = "0.2"
dashmap = "6.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.21"
arc-swap = "1.7"
sha2 = "0.10"
async-trait = "0.1.42"
clap = { version = "4.5", features = ["derive", "env"] }

libc = "0.2"
nix = { version = "0.30", features = ["signal", "process", "fs", "user"] }
inotify = { version = "0.11", default-features = false }
fsevent-sys = "4.1"
core-foundation = "0.10"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading", 
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
] }
winapi-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
inherits = "release"
strip = false
debug = true