[workspace]
members = [
    "bunctl",
    "bunctl-core", 
    "bunctl-supervisor",
    "bunctl-logging",
    "bunctl-ipc",
]
resolver = "2"

[workspace.package]
version = "3.0.0-alpha.1"
edition = "2024"
authors = ["sionzee"]
license = "MIT"
repository = "https://github.com/evobug/bunctl-rs"
rust-version = "1.89.0"

[workspace.dependencies]

# unix dependencies

#[target.'cfg(unix)'.workspace.dependencies]
nix = { version = "0.30", features = ["signal", "process", "fs", "user"] }
libc = "0.2"

# windows dependencies

#[target.'cfg(windows)'.workspace.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
] }

# common dependencies

tokio = { version = "1.47", features = ["rt", "macros", "time", "process", "signal", "fs", "io-util", "sync", "parking_lot", "net", "test-util", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.10"
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"
sha2 = "0.10"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.9"
tempfile = "3"
shell-words = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
inherits = "release"
strip = false
debug = true