[package]
name = "bunctl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
rand = "0.9"
shell-words = "1.1"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }