[package]
name = "bunctl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
shell-words = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
