[package]
name = "bunctl-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunctl-core = { path = "../bunctl-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net"] }
windows-sys = { workspace = true }