[package]
name = "bunctl-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunctl-core = { path = "../bunctl-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net"] }
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
tokio = { workspace = true, features = ["rt-multi-thread", "test-util", "macros"] }
proptest = "1.6"
criterion = "0.6"
futures = "0.3"
rand = "0.8"