[package]
name = "bunctl-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunctl-core = { path = "../bunctl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }