[package]
name = "bunctl-supervisor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunctl-core = { path = "../bunctl-core" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }