[package]
name = "bunctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bunctl"
path = "src/main.rs"

[dependencies]
bunctl-core = { path = "../bunctl-core" }
bunctl-supervisor = { path = "../bunctl-supervisor" }
bunctl-logging = { path = "../bunctl-logging" }
bunctl-ipc = { path = "../bunctl-ipc" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
arc-swap = { workspace = true }
chrono = "0.4"
tabled = "0.20"
colored = "3.0"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"