[package]
name = "bunctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bunctl"
path = "src/main.rs"

[dependencies]
bunctl-core = { path = "../bunctl-core" }
bunctl-supervisor = { path = "../bunctl-supervisor" }
bunctl-logging = { path = "../bunctl-logging" }
bunctl-ipc = { path = "../bunctl-ipc" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
colored = "3.0"
atty = "0.2"
num_cpus = "1.16"
console-subscriber = { version = "0.4", optional = true }

[features]
console = ["console-subscriber"]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.2.0"
tempfile = { workspace = true }
